[package]
name = "mdns-responder"
version = "0.3.0"
authors = ["Paul Lietar <paul@lietar.net>", "Alex Zarundyi <hedgar2017@gmail.com>"]
description = "Rust mDNS responder"
repository = "https://github.com/hedgar2017/rust-mdns-responder"
readme = "README.md"
license = "MIT"

[dependencies]
byteorder = "1.0"
futures = "0.1.6"
libc = "0.2.35"
log = "0.3"
multimap = "0.3"
net2 = "0.2"
nix = "0.9.0"
rand = "0.3"
tokio-core = "0.1.1"
dns-parser = { git = "https://github.com/plietar/dns-parser" }

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.1"
socket2 = "0.2.2"

[dev-dependencies]
env_logger = "0.5.10"
